--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "starter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/keyukidau4/portfolio-starter-master",
   "dependencies": {
+    "-": "^0.0.1",
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -11,10 +13,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "save-dev": "^0.0.1-security",
     "swiper": "^8.1.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
